# Thesis

./: .gitignore  .gitmodules  LICENSE  Untitled Diagram.drawio
gazebo_continuous_track/include/gazebo_continuous_track/: gazebo_continuous_track.hpp  gazebo_continuous_track_properties.hpp  gazebo_continuous_track_simple.hpp  gazebo_wrap.hpp
gazebo_continuous_track/src/: gazebo_continuous_track.cpp  gazebo_continuous_track_simple.cpp
python_scripts/: cmd_vel.py  test.py
ros2_ws/src/example_2/bringup/launch/: minimal_diffbot.launch.py
ros2_ws/src/example_2/description/ros2_control/: diffbot.ros2_control.xacro
ros2_ws/src/example_2/description/urdf/: diffbot.urdf.xacro
ros2_ws/src/example_2/hardware/: diffbot_system.cpp
ros2_ws/src/example_2/hardware/include/ros2_control_demo_example_2/: diffbot_communicator.hpp  diffbot_system.hpp
ros2_ws/src/gazebo_continuous_track/: CMakeLists.txt  package.xml
ros2_ws/src/robot_visual/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_visual/launch/: launch_sim.launch.py  robot_visual_launch.xml  rpilidar.launch.py  rsp.launch.py  sim_launch.xml
ros2_ws/src/robot_visual/rvis/: robot.rviz
ros2_ws/src/robot_visual/urdf/: example_lugged_wheel.urdf.xacro  example_lugged_wheel_gazebo.urdf.xacro  example_track.urdf.xacro  example_track_gazebo.urdf.xacro  example_track_simple_gazebo.urdf.xacro  example_track_simple_wheels_gazebo.urdf.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_visual.urdf.xacro
ros2_ws/src/robot_visual/world/: empty.world
ros2_ws/src/thesis_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/thesis_robot/launch/: launch_thesis_robot.launch.py
thesis_ws/: .gitignore  CMakeLists.txt  micro_ros.cmake
thesis_ws/src/: CMakeLists.txt  main copy.c  main.c  motor_calcs.c  motor_calcs.h  motor_pid.c  motor_pid.h
