<?xml version="1.0"?>
<package format="3">
  <name>gazebo_continuous_track</name>
  <version>0.0.1</version>
  <description>The gazebo_continuous_track package</description>

  <maintainer email="yoshito@robots.ox.ac.uk">Yoshito</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>ament_index_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
